--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Redux Todos with Undo example</title>
+    <title>Flowsheet</title>
 </head>
 <body>
 <div id="root">
